Apply OpenRewrite Java 21 transformations and Spotless formatting
Co-authored-by: MapleZeke <203521984+MapleZeke@users.noreply.github.com>