@@ -101,8 +101,7 @@ public class ShopAcceptor {
                         return;
                       }
                       ClientSocket socket = new ClientSocket(ch);
-                      socket.setAddr(
-                          String.format("%s:%d", socket.getSocketRemoteIP(), addr.getPort()));
+                      socket.setAddr("%s:%d".formatted(socket.getSocketRemoteIP(), addr.getPort()));
                       socket.initSequence();
                       int serialNo = serialNoCounter.incrementAndGet();
                       socket.setLocalSocketSN(serialNo);
